--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ a {
 
 body {
   position: relative;
-  width: 1170px;
-  height: 768px;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   color: #504A62;
   text-align: center;
@@ -135,28 +135,18 @@ label {
 }
 
 @media (min-width: 1366px) {
-  body {
-    width: 1366px;
+  .header {
+    margin-top: 35px;
     padding: 0 98px;
   }
 
-  .header {
-    margin-top: 35px;
-  }
-
-  .info::before {
-    left: -115px;
-  }
-
-  .info::after {
-    right: -98px;
+  .info {
+    padding: 0 98px;
   }
 }
 
 @media (min-width: 1920px) {
   body {
-    width: 1920px;
-    height: 974px;
     padding: 0;
   }
 
@@ -188,14 +178,12 @@ label {
   .info::before {
     width: 527px;
     height: 972px;
-    left: 0;
     background: url(pics/BigGroup_left.png);
   }
 
   .info::after {
     width: 555px;
     height: 974px;
-    right: 0;
     background: url(pics/BigGroup_right.png);
   }
 
@@ -225,10 +213,6 @@ label {
 }
 
 @media (max-width: 1023px) {
-  body {
-    width: 375px;
-    height: 667px;
-  }
 
   p {
     margin: 0;
