--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ a {
 body {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  max-height: 100vh;
   margin: 0 auto;
   color: #504A62;
   text-align: center;
@@ -84,6 +85,10 @@ label {
 
 .info {
   position: relative;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .info::before {
@@ -128,9 +133,10 @@ label {
 }
 
 .info__img {
-  display: block;
+  display: flex;
   margin: 0 auto;
-  vertical-align: bottom;
+  align-self: flex-end;
+
 }
 
 .info__img_big {
@@ -153,7 +159,9 @@ label {
 }
 
 @media (min-width: 1920px) {
-  body {
+  body,
+  .header,
+  .info {
     padding: 0;
   }
 
